# cpat

./: .deepsource.toml  .eslintrc.cjs  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: publish.yml  test-on-pr.yml
src/: App.vue  invoke.ts  main.ts  router.ts  settings.ts  store.ts  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs
src-tauri/src/cpp/: mod.rs  schools.rs
src-tauri/src/cpp/pathways/: mod.rs
src-tauri/src/cpp/students/: emp_profile.rs  mod.rs
src/components/: CredentialsModal.vue  NavigationAside.vue  ProgressDialog.vue  StudentSearch.vue  StudentTableModal.vue
src/store/: configStore.ts  index.ts
src/views/: HomePage.vue  WelcomePage.vue
src/views/students/: CTECourses.vue  EmployablitySkills.vue  IndustryCredentials.vue  TechnicalAssessment.vue  TechnicalSkills.vue
